fix: hide sidebar scrollbar while keeping scroll functional

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.sidebar-nav::-webkit-scrollbar,
+aside::-webkit-scrollbar {
+  display: none;
+}
